# ix

./: .envrc  .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  Check.lean  Clock.lean  DebugIxVM.lean  Ix.lean  KeccakCheck.lean  Kernel.lean  Kernel2.lean  Main.lean  PATCH.md  PLAN.md  PLAN_3B.md  README.md  RecursiveVerifier.lean  STYLE.md  TACTICS.md  TODO.md  Tests.lean  _rustfmt.toml  build.rs  cold_groups.md  deny.toml  ffi.c  flake.nix  ix.nix  lake-manifest.json  lakefile.lean  lakefile.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml  lean.h.hash  valgrind.supp
.github/scripts/: bench.py  run.sh  watchdog.sh
.github/workflows/: aiur-bench.yml  bench-keccak-recursive-tmp.yml  bench-main.yml  bench-pr.yml  bench-recursive-tmp.yml  bench-thresholds-reset.yml  bench.yml  bencher-plots.yml  bencher-thresholds-reset.yml  blake3.yml  cgroup-memcap.yml  ci.yml  codeql.yml  compile.yml  cpu-info.yml  ignored.yml  lspec.yml  nix.yml  riscv-bench.yml  valgrind.yml
Apps/: Test.lean  ZKVoting.lean
Apps/ZKVoting/: Common.lean  Prover.lean  ProverInit.lean  Verifier.lean
Benchmarks/: Aiur.lean  Blake3.lean  CheckNatAddComm.lean  CompileInit.lean  HashCommon.lean  IxRecursion.lean  IxVM.lean  Keccak.lean  Lean4Lean.lean  Lean4LeanMain.lean  Main.lean  Poseidon2.lean  RecursiveVerifier.lean  Report.lean  Serde.lean  Sha256.lean  ShardMap.lean  Typecheck.lean  Vectors.csv  bench-config.json
Ix/: Address.lean  Aiur.lean  AssumptionTree.lean  Basic.lean  Benchmark.lean  Binius.lean  Blake3.lean  BuiltIn.lean  ByteArray.lean  CallSitePlan.lean  CallSiteSurgery.lean  CanonM.lean  Claim.lean  Command.lean  Commit.lean  Commitment.lean  Common.lean  CompileDriver.lean  CompileFFI.lean  CompileM.lean  CompileMOld.lean  CondenseM.lean  Cronos.lean  CronosRs.lean  DecompileDriver.lean  DecompileM.lean  DecompileMOld.lean  DecompileRoundtrip.lean  DecompileV2.lean  Environment.lean  GraphM.lean  Ground.lean  GroundM.lean  IR.lean  IndexMap.lean  IxM.lean  IxVM.lean  IxVM2.lean  Ixon.lean  IxonOld.lean  (+27 more)
Tests/: Aiur.lean  Aiur2.lean  AiurHashes.lean  AiurHashesMain.lean  AiurMain.lean  AiurTest.lean  Archon.lean  ArithExpr.lean  Binius.lean  Blake3.lean  Boundary.lean  ByteArray.lean  Cli.lean  Common.lean  FFI.lean  FFIConsistency.lean  Iroh.lean  Ix.lean  IxVM.lean  IxVMMain.lean  IxVMTest.lean  Ixon.lean  Keccak.lean  Main.lean  MinimalDefs.lean  MultiStark.lean  Rust.lean  Sha256.lean  ShardMap.lean  Unsigned.lean
c/: aiur.c  archon.c  binius.c  common.h  ffi.c  iroh.c  ixon_ffi.c  keccak.c  lean_env.c  linear.h  rust.h  u128.c  unsigned.c
crates/aiur/: Cargo.toml
crates/aiur/src/: bytecode.rs  constraints.rs  execute.rs  gadgets.rs  lib.rs  memory.rs  querymap.rs  synthesis.rs  trace.rs  vk_codec.rs
crates/aiur/src/gadgets/: blake3.rs  bytes1.rs  bytes2.rs
crates/common/: Cargo.toml
crates/common/src/: address.rs  env.rs  lib.rs
crates/compile/: Cargo.toml
crates/compile/src/: compile.rs  condense.rs  congruence.rs  decompile.rs  graph.rs  ground.rs  kernel_egress.rs  lib.rs  mutual.rs  store.rs
crates/compile/src/compile/: aux_gen.rs  env.rs  mutual.rs  nat_conv.rs  surgery.rs
crates/compile/src/compile/aux_gen/: below.rs  brecon.rs  cases_on.rs  expr_utils.rs  nested.rs  rec_on.rs  recursor.rs
crates/compile/src/congruence/: perm.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: _iroh.rs  aiur.rs  byte_array.rs  compile.rs  graph.rs  ix.rs  kernel.rs  lean.rs  lean_env.rs  lean_ixon.rs  lib.rs  primitives.rs  refcount.rs  texray.rs  unsigned.rs
crates/ffi/src/aiur/: protocol.rs  toplevel.rs
crates/ffi/src/ix/: address.rs  constant.rs  data.rs  env.rs  expr.rs  level.rs  name.rs
crates/ffi/src/lean_ixon/: compare.rs  constant.rs  diff.rs  enums.rs  env.rs  expr.rs  meta.rs  pack.rs  serialize.rs  sharing.rs  univ.rs
crates/ixon/: Cargo.toml
crates/ixon/src/: assumption_tree.rs  comm.rs  constant.rs  diff.rs  env.rs  error.rs  expr.rs  lazy.rs  lib.rs  map.rs  merkle.rs  metadata.rs  proof.rs  serialize.rs  sharing.rs  spill.rs  tag.rs  univ.rs
crates/ixvm-codegen/: Cargo.toml
crates/ixvm-codegen/src/: aiur_ixvm_witness.rs  aiur_multi_stark.rs  aiur_multi_stark_runner.rs  env_handle.rs  lib.rs
crates/kernel/: Cargo.toml
crates/kernel/examples/: block_reduce_histo.rs  check_one.rs  heaviest_block.rs  manifest_info.rs  perf_check.rs  shard_names.rs  shard_plan.rs
crates/kernel/src/: anon_env.rs  anon_work.rs  canonical_check.rs  check.rs  claim.rs  congruence.rs  constant.rs  def_eq.rs  env.rs  equiv.rs  error.rs  expr.rs  id.rs  inductive.rs  infer.rs  ingress.rs  lctx.rs  level.rs  lib.rs  mode.rs  perf.rs  primitive.rs  profile.rs  shard.rs  subst.rs  tc.rs  testing.rs  whnf.rs
crates/kernel/src/tutorial/: basic.rs  defeq.rs  inductive.rs  mod.rs  reduction.rs
docs/: Ixon.md  benchmarking.md  book.toml  env_machine_whnf.md  ffi.md  ix_canonicity.md  ixvm-context-free-inference.org  kernel_identity.md  zisk-cycle-cost-model.md
ix_test/: IxTest.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
lean-sys/: Cargo.toml
sp1/: Cargo.toml  rust-toolchain.toml
sp1-compress/: Cargo.toml  README.md
sp1-compress/guest/: Cargo.toml
sp1-compress/guest/src/: main.rs
sp1-compress/host/: Cargo.toml  build.rs
sp1-compress/host/examples/: debug_vk.rs
sp1-compress/host/src/: demo.rs  lib.rs  main.rs  wrap.rs
sp1/guest/: Cargo.toml
sp1/guest/src/: main.rs
sp1/host/: Cargo.toml
sp1/host/src/: main.rs
src/: aiur.rs  cons_list.rs  ffi.rs  iroh.rs  ix.rs  ixon.rs  lean.rs  lean_env.rs  lib.rs  sha256.rs
tools/: CheckReach.lean  OrphanCheck.lean  migrate_orphans.py  orphan_filtered.txt  orphan_list.txt  orphan_list_lean.md  orphans_to_move.txt  theorem-stats.md  theorem-stats.py
zisk/: Cargo.toml
zisk/agg-guest/: Cargo.toml  build.rs
zisk/agg-guest/src/: main.rs
zisk/guest/: Cargo.toml  build.rs
zisk/guest/src/: main.rs
zisk/host/: Cargo.toml  build.rs
zisk/host/src/: lib.rs  main.rs
zisk/scripts/: bench-cycles.sh  mem-guard.sh  mergesort-250k.sh  prove-batch.sh
(+771 files in other folders)
