[workspace]
members = [
  "crates/aiur",
  "crates/bench",
  "crates/common",
  "crates/compile",
  "crates/ffi",
  "crates/ixvm-codegen",
  "crates/ixon",
  "crates/kernel",
]
# `zisk/` and `sp1/` are their own Cargo workspaces (guest + host) built via
# the respective zkVM toolchains; excluded so host workspace ops don't pick
# them up. `multi-stark/` is the local checkout used as a path dependency —
# it is its own workspace root, excluded here so cargo doesn't absorb it.
exclude = ["zisk", "sp1", "multi-stark"]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
aiur = { path = "crates/aiur" }
ixvm-codegen = { path = "crates/ixvm-codegen" }
ix-bench = { path = "crates/bench" }
ix-common = { path = "crates/common" }
ix-compile = { path = "crates/compile" }
ixon = { path = "crates/ixon" }
ix-kernel = { path = "crates/kernel" }

# lean-ffi tree (lean-ffi crate + factored-out bignat sub-crate)
bignat = { git = "https://github.com/argumentcomputer/lean-ffi.git", rev = "839b405de708b80504fda39abe1402114b4135a5" }
lean-ffi = { git = "https://github.com/argumentcomputer/lean-ffi.git", rev = "839b405de708b80504fda39abe1402114b4135a5" }

# External shared deps
anyhow = "1"
blake3 = "1.8.4"
dashmap = "6.1.0"
hashbrown = "0.15"
indexmap = "2"
itertools = "0.14.0"
libc = "0.2"
log = "0.4"
memmap2 = "0.9"
mimalloc = { version = "0.1", default-features = false }
multi-stark = { path = "multi-stark" }
num-bigint = "0.4.6"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rayon = "1"
rustc-hash = "2"
serde_json = "1"
sha2 = "0.10"
tiny-keccak = { version = "2", features = ["keccak"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-texray = { git = "https://github.com/argumentcomputer/tracing-texray", rev = "465bbca0bea4721e58419c11cabd8cce21757822" }

[workspace.lints.rust]
invalid_reference_casting = "warn"
nonstandard_style = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
disallowed_methods = "warn"
enum_glob_use = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
fn_to_numeric_cast = "warn"
fn_to_numeric_cast_with_truncation = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
same_functions_in_if_condition = "warn"
trait_duplication_in_bounds = "warn"
unnecessary_cast = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
type_complexity = "allow"
too_many_arguments = "allow"
