[workspace]
members = ["host"]
# `guest/` and `agg-guest/` are built via `zisk_sdk::build_program` for
# the riscv64ima-zisk-zkvm-elf target and only compile under
# `cargo-zisk`; excluded so host workspace ops don't pick them up.
exclude = ["guest", "agg-guest"]
resolver = "2"

[workspace.dependencies]
# argumentcomputer/zisk fork — the `blake3-precompile` branch adds a Blake3
# compression precompile on top of upstream Zisk v0.18.0 (proofman v0.18.0).
# The guest reaches the precompile via `ziskos::zisklib::blake3` or,
# transparently, through the `blake3` shim crate (see `zisk/guest/Cargo.toml`).
zisk-sdk = { git = "https://github.com/argumentcomputer/zisk.git", branch = "blake3-precompile" }
ziskos = { git = "https://github.com/argumentcomputer/zisk.git", branch = "blake3-precompile" }

[profile.release]
panic = "abort"

# No local-path patch: the host builds zisk-sdk directly from the
# `blake3-precompile` branch above (now that v0.18.0 + the blake3 shim are
# pushed). To iterate against a local checkout instead, re-add:
#   [patch."https://github.com/argumentcomputer/zisk.git"]
#   zisk-sdk = { path = "/path/to/zisk/sdk" }
