[package]
name = "aiur"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hashbrown = { workspace = true }
indexmap = { workspace = true }
libc = { workspace = true }
multi-stark = { workspace = true }
num-bigint = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
tracing-texray = { workspace = true }

[features]
default = []
parallel = ["multi-stark/parallel"]

[lints]
workspace = true
