[package]
name = "ix-compile"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bignat = { workspace = true }
blake3 = { workspace = true }
dashmap = { workspace = true, features = ["rayon"] }
indexmap = { workspace = true, features = ["rayon"] }
itertools = { workspace = true }
ix-common = { workspace = true }
ixon = { workspace = true }
ix-kernel = { workspace = true }
num-bigint = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
