[package]
name = "ix-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
aiur = { workspace = true }
anyhow = { workspace = true }
bignat = { workspace = true }
blake3 = { workspace = true }
dashmap = { workspace = true, features = ["rayon"] }
indexmap = { workspace = true, features = ["rayon"] }
itertools = { workspace = true }
ixvm-codegen = { workspace = true }
ix-bench = { workspace = true }
ix-common = { workspace = true }
ix-compile = { workspace = true }
ixon = { workspace = true }
ix-kernel = { workspace = true }
lean-ffi = { workspace = true }
memmap2 = { workspace = true }
multi-stark = { workspace = true }
mimalloc = { workspace = true }
num-bigint = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tiny-keccak = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-texray = { workspace = true }

# SP1 proof compression (`ix compress`). Building with the `sp1` feature
# needs the succinct toolchain (sp1up) on PATH for the guest ELF and protoc
# for the SDK. See sp1-compress/README.md.
sp1-compress-host = { path = "../../sp1-compress/host", optional = true }

# Iroh dependencies
bytes = { version = "1.10.1", optional = true }
tokio = { version = "1.44.1", optional = true }
iroh = { version = "0.97", optional = true }
iroh-base = { version = "0.97", optional = true }
n0-error = { version = "0.1", optional = true }
getrandom = { version = "0.3", optional = true }
bincode = { version = "2.0.1", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
default = []
parallel = ["aiur/parallel"]
test-ffi = []
net = ["bytes", "tokio", "iroh", "iroh-base", "n0-error", "getrandom", "bincode", "serde"]
sp1 = ["dep:sp1-compress-host"]

[lints]
workspace = true
