[package]
name = "ixvm-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aiur = { workspace = true }
ix-common = { workspace = true }
ixon = { workspace = true }
dashmap = { workspace = true, features = ["rayon"] }
multi-stark = { workspace = true }
num-bigint = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
stacker = "0.1"

[lints]
workspace = true
