[package]
name = "sp1-compress-host"
version = "0.1.0"
edition = "2024"

[dependencies]
# `parallel` mirrors the FFI host build: multi-stark's prover parallelizes
# under rayon. Only the host proves; the guest never enables it.
aiur = { path = "../../crates/aiur", features = ["parallel"] }
# Same rev as the root workspace and the guest — see guest/Cargo.toml.
multi-stark = { git = "https://github.com/argumentcomputer/multi-stark.git", rev = "2c019220cb43ce946efec6b9caf507f5a6bccd1c" }
blake3 = "1"
# Git tag rather than crates.io: the SDK's `cuda` feature depends on
# `sp1-cuda` 6.3.1, which was never published to crates.io and only resolves
# from the sp1 repo itself. Same code as the crates.io 6.3.1 release.
sp1-sdk = { git = "https://github.com/succinctlabs/sp1", tag = "v6.3.1" }
# The `wrap` upgrade path (resume shrink→wrap→gnark from a saved compressed
# proof) needs the prover internals the SDK doesn't re-export. Same tag as
# sp1-sdk; the slop-* crates live in the same repo.
sp1-prover = { git = "https://github.com/succinctlabs/sp1", tag = "v6.3.1" }
sp1-hypercube = { git = "https://github.com/succinctlabs/sp1", tag = "v6.3.1" }
sp1-primitives = { git = "https://github.com/succinctlabs/sp1", tag = "v6.3.1" }
sp1-recursion-circuit = { git = "https://github.com/succinctlabs/sp1", tag = "v6.3.1", default-features = false }
sp1-recursion-executor = { git = "https://github.com/succinctlabs/sp1", tag = "v6.3.1", default-features = false }
sp1-recursion-gnark-ffi = { git = "https://github.com/succinctlabs/sp1", tag = "v6.3.1", default-features = false }
slop-algebra = { git = "https://github.com/succinctlabs/sp1", tag = "v6.3.1" }
slop-bn254 = { git = "https://github.com/succinctlabs/sp1", tag = "v6.3.1" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# Proof-size measurement: `SP1ProofWithPublicValues::bytes()` only supports
# the onchain encodings, so Compressed sizes are measured via bincode — the
# same encoding `.save()` writes (see ../../sp1/host/Cargo.toml).
bincode = "1.3"
hex = "0.4"

[build-dependencies]
sp1-build = "6.3.1"

[features]
default = []
# NVIDIA GPU proving via the auto-downloaded `sp1-gpu-server` (no Docker).
# Compile-time only makes the prover available; select it at runtime with
# SP1_PROVER=cuda.
cuda = ["sp1-sdk/cuda"]
# SP1's portable executor instead of the native JIT one (which runs the guest
# in a /dev/shm-backed child process and SIGBUSes when shm is tiny, e.g. in
# sandboxes/containers). Also enables the executor's cycle tracker.
portable = ["sp1-sdk/profiling"]
