# Standalone workspace root. This guest crate is compiled out-of-tree for
# the zkVM target and never joins the host Cargo workspace; its own (empty)
# `[workspace]` pins cargo's upward workspace search to this directory.
# Without it, a NESTED checkout — e.g. the benchmark base-run, which checks
# the base repo out under `base/` inside the PR checkout — lets cargo walk
# past the relative `exclude` paths in the outer manifests and resolve this
# crate to the outer workspace, failing the build script with "current
# package believes it's in a workspace when it's not".
[workspace]

[package]
name = "sp1-guest"
version = "0.1.0"
edition = "2024"

[dependencies]
ixon = { path = "../../crates/ixon" }
ix-kernel = { path = "../../crates/kernel" }
ix-common = { path = "../../crates/common" }
sp1-zkvm = { git = "https://github.com/argumentcomputer/sp1", branch = "blake3-precompile" }

# Force blake3 to the patched copy that routes `compress_in_place` /
# `compress_xof` through SP1's BLAKE3_COMPRESS precompile on the zkVM target.
# The guest's transitive blake3 (via ix-kernel) would otherwise resolve to
# the registry version because `sp1-build` doesn't extend the host workspace.
[patch.crates-io]
blake3 = { git = "https://github.com/argumentcomputer/BLAKE3", branch = "sp1" }
