[package]
name = "sp1-host"
version = "0.1.0"
edition = "2024"
default-run = "sp1-host"

[[bin]]
name = "sp1-host"
path = "src/main.rs"

[dependencies]
ixon = { path = "../../crates/ixon" }
ix-common = { path = "../../crates/common" }
# Used only to count work items for human-readable output via
# `build_anon_work` — same enumeration the guest runs in-circuit.
ix-kernel = { path = "../../crates/kernel" }
# `profiling` turns on the SP1 executor's cycle-tracker: it reads
# `cycle-tracker-report-{start,end}: <label>` lines from the guest's stdout
# and surfaces per-label totals on `ExecutionReport`. Used by the
# coarse-grain `ingress` / `check_const_loop` brackets in
# `../guest/src/main.rs` and printed via `Display` in `src/main.rs` when
# `--execute` is set. Negligible host-side cost when no markers are emitted.
sp1-sdk = { version = "6.2.0", features = ["profiling"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1"
# Throughput formatting (e.g. `42.0 consts/s`).
human-repr = "1"
# Proof-size measurement: SP1's `SP1ProofWithPublicValues::bytes()` returns
# the onchain-verifier encoding (Plonk/Groth16 only) and panics on
# Compressed, so for size we use `bincode::serialized_size` — the same
# encoding the SDK's `.save()` writes, so the reported number equals what
# a saved proof would occupy on disk.
bincode = "1.3"

[build-dependencies]
sp1-build = "6.2.0"

[features]
cuda = ["sp1-sdk/cuda"]
