[package]
name = "sp1-host"
version = "0.1.0"
edition = "2024"
default-run = "sp1-host"

[[bin]]
name = "sp1-host"
path = "src/main.rs"

[dependencies]
ixon = { path = "../../crates/ixon" }
ix-common = { path = "../../crates/common" }
# Used only to count work items for human-readable output via
# `build_anon_work` — same enumeration the guest runs in-circuit.
ix-kernel = { path = "../../crates/kernel" }
# `profiling` turns on the SP1 executor's cycle-tracker: it reads
# `cycle-tracker-report-{start,end}: <label>` lines from the guest's stdout
# and surfaces per-label totals on `ExecutionReport`. Used by the
# coarse-grain `ingress` / `check_const_loop` brackets in
# `../guest/src/main.rs` and printed via `Display` in `src/main.rs` when
# `--execute` is set. Negligible host-side cost when no markers are emitted.
# `experimental` enables the fork's `WITHOUT_VK_VERIFICATION` bypass on the
# host verifier (sp1-prover light-node path). Required because the guest hashes
# via the BLAKE3_COMPRESS precompile, whose recursion shapes aren't in the
# bundled `vk_map.bin` — without the bypass, prove/verify fails with
# `vk not allowed` / `vk_root mismatch`. Drop once the production vk_map.bin is
# regenerated with the new chip. `profiling` enables the executor cycle-tracker.
sp1-sdk = { git = "https://github.com/argumentcomputer/sp1", branch = "blake3-precompile", features = ["profiling", "experimental"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1"
# Neutral per-constant results JSON (`--json`), merged by the CI bench driver.
serde_json = "1"
# Process-tree RSS sampler (accurate peak RAM) + per-phase timing sink for the
# CI drill-down.
tracing-texray = { git = "https://github.com/argumentcomputer/tracing-texray", rev = "bd4faa08a4fa4edb46bde393b4d20c6bd49591d0" }
# Throughput formatting (e.g. `42.0 consts/s`).
human-repr = "1"
# Proof-size measurement: SP1's `SP1ProofWithPublicValues::bytes()` returns
# the onchain-verifier encoding (Plonk/Groth16 only) and panics on
# Compressed, so for size we use `bincode::serialized_size` — the same
# encoding the SDK's `.save()` writes, so the reported number equals what
# a saved proof would occupy on disk.
bincode = "1.3"

[build-dependencies]
sp1-build = { git = "https://github.com/argumentcomputer/sp1", branch = "blake3-precompile" }

[features]
cuda = ["sp1-sdk/cuda"]
